pihole/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: pihole
  namespace: tedy
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: pihole
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        k8s-app: pihole
    spec:
      terminationGracePeriodSeconds: 0
      dnsPolicy: None
      hostNetwork: true
      dnsConfig:
        nameservers:
        - 127.0.0.1
        - 1.1.1.1
      containers:
        - name: pihole
          image: pihole/pihole:latest
          ports:
            - containerPort: 53
              hostPort: 53
              protocol: UDP
            - containerPort: 67
              hostPort: 67
              protocol: UDP
            - containerPort: 80
              hostPort: 80
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/pihole/ 
              name: pihole
            - mountPath: /etc/dnsmasq.d/
              name: dnsmasq
          resources:
            limits:
              memory: "120Mi"
              cpu: "50m"
      volumes:
        - name: pihole
          persistentVolumeClaim:
            claimName: pihole
        - name: dnsmasq
          persistentVolumeClaim:
            claimName: dnsmasq
      nodeSelector:
        kubernetes.io/os: linux
        kubernetes.io/arch: arm
