pihole/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: pihole
  namespace: tedy
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    k8s-app: pihole
