pihole/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: pihole
  namespace: tedy
  annotations:
    ingress.kubernetes.io/auth-type: "forward"
    ingress.kubernetes.io/auth-url: "https://auth.stoicatedy.ovh/api/verify?rd=https://auth.stoicatedy.ovh"
spec:
  rules:
    - host: pihole.stoicatedy.ovh
      http:
        paths:
          - path: /
            backend:
              serviceName: pihole
              servicePort: 80
